cluster/addons/minio/tenant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homelab-minio-console
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
    gethomepage.dev/description: Local S3 storage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: minio.png
    gethomepage.dev/name: MinIO
spec:
  rules:
    - host: minio.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homelab-minio-console
                port:
                  name: https-console
  tls:
    - hosts:
        - minio.internal
      secretName: homelab-minio-console-tls
